# habla-hermano

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml  tasks.md
.github/workflows/: ci.yml
.serena/: project.yml
data/: .gitkeep  schema.sql  schema_migration_guest_progress.sql
data/lessons/: .gitkeep
data/lessons/es/A0/: colors-001.yaml  family-001.yaml  greetings-001.yaml  introductions-001.yaml  numbers-001.yaml
docs/: api.md  architecture.md  codebase-summary.md  playwright-e2e.md  product.md  testing.md
docs/adr/: ADR-001-supabase-integration.md
docs/design/: phase0-project-setup.md  phase1-basic-chat.md  phase2-grammar-feedback.md  phase3-scaffold-node.md  phase4-persistence.md  phase5-supabase-auth.md  phase6-micro-lessons.md  phase7-progress-tracking.md  phase8-guest-session-support.md
src/: __init__.py
src/agent/: __init__.py  checkpointer.py  graph.py  prompts.py  routing.py  state.py
src/agent/nodes/: __init__.py  analyze.py  feedback.py  respond.py  scaffold.py
src/api/: __init__.py  auth.py  config.py  dependencies.py  main.py  session.py  supabase_client.py
src/api/routes/: __init__.py  auth.py  chat.py  lessons.py  progress.py
src/db/: __init__.py  models.py  repository.py  seed.py
src/lessons/: __init__.py  models.py  service.py
src/services/: __init__.py  levels.py  merge.py  progress.py  vocabulary.py
src/static/css/: input.css  styles.css
src/static/js/: app.js
src/templates/: base.html  chat.html  lesson_player.html  lessons.html  progress.html
src/templates/auth/: login.html  signup.html
src/templates/partials/: conversation_header.html  feedback.html  grammar_feedback.html  lesson_complete.html  lesson_exercise.html  lesson_step.html  message.html  message_pair.html  progress_vocab.html  scaffold.html  stats_summary.html  vocab_sidebar.html
tests/: conftest.py  test_agent_graph.py  test_agent_nodes.py  test_agent_prompts.py  test_agent_state.py  test_analyze_node.py  test_api_config.py  test_api_routes.py  test_auth.py  test_auth_routes.py  test_checkpointer.py  test_data_capture.py  test_database.py  test_db_models.py  test_db_repository.py  test_guest_progress.py  test_lesson_models.py  test_lesson_routes.py  test_lesson_service.py  test_lessons_progress_routes.py  test_merge_service.py  test_persistence_integration.py  test_progress_service.py  test_routing.py  test_scaffold_node.py  test_services.py  test_services_levels.py  test_services_vocabulary.py  test_session.py  test_supabase_client.py
